deploy/k8s/services/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: vortex
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
